--- a/lab-fourth/CMakeLists.txt
+++ b/lab-fourth/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
-project(lab_first)
+project(lab_fourth)
 
 set(CMAKE_CXX_STANDARD 14)
 
 find_package(OpenMP)
 
-add_executable(lab_third main.cpp Dijkstra.cpp Graph.cpp)
+
+add_executable(lab_fourth main.cpp Dijkstra.cpp Graph.cpp)
